fixed the map wiggling sometimes because of an appearing scrollbar on the html body

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -3,6 +3,9 @@ html, body {
 }
 body {
   padding-top: 50px;
+
+}
+body.noScroll {
   overflow: hidden;
 }
 
